# python-project-lvl1

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: make-lint.yml
brain_games/: __init__.py  cli.py  engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  logic.py
